set(DYNAMIC_CMDS_LIST DynTest DTState)
if (ENABLE_RUST_SUPPORT)
	extend_set(DYNAMIC_CMDS_LIST StringCalc)
endif()
FILE(REMOVE ${CMAKE_SOURCE_DIR}/modules.load)
foreach(lib ${DYNAMIC_CMDS_LIST})
	add_library(cmd_${lib} SHARED cmd_${lib}.cpp)
	target_link_libraries(cmd_${lib} ${PROJECT_NAME})
	FILE(APPEND ${CMAKE_SOURCE_DIR}/modules.load libcmd_${lib}\n)
endforeach()
if (ENABLE_RUST_SUPPORT)
	target_link_libraries(cmd_StringCalc stringcalc)
endif()
