[package]
name = "builder"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14" 
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "process", "io-util", "fs"] }
tonic-reflection = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
async-stream = "0.3"
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1" 
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "multipart"] }
futures-util = "0.3" # Helper to stream data to file
git2 = "0.20"
tar = "0.4"
zip = "7.2"
flate2 = "1.1"
ctrlc = "3.5"
chrono = "0.4"
walkdir = "2"
sysinfo = "0.30"
uuid = { version = "1.20.0", features = [ "v4" ] }
which = "8.0.0"
num_cpus = "1.0"
xml = "1.2.1"
regex = "1.10.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "resource"] }

[dev-dependencies]
tempfile = "3.24"

[build-dependencies]
tonic-build = "0.14"
prost-build = "0.14.3"
tonic-prost-build = "0.14"

[[bin]]
name = "builder"
path = "src/main.rs"